Make changes in homework

--- a/Homework_03_07_2022/index.html
+++ b/Homework_03_07_2022/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <form class="form">
-        <p class="fa-solid fa-xmark cross"></p>
+      <p class="fa-solid fa-xmark cross"></p>
       <h2 class="form1_title">Enter</h2>
       <input class="form1_input" type="text" placeholder="Enter email:" />
       <input
@@ -17,12 +17,16 @@
         type="Password"
         placeholder="Enter passwort:"
       />
-      <a href="/login.html"><p class="form1_text">Recover password</p></a>
+      <a class="silka" href="/login.html"><p class="form1_text">Reset password</p></a>
 
       <button class="form1_btn1">Sign in</button>
-      <button class="form1_btn2">Sign up</button>
+      <!-- <button class="form1_btn2">Sign up</button> -->
+      <!-- <a href="/login.html"><button class="form1_btn2">Sign up</button></a> -->
+      <a href="/login.html" class="form1_btn2">Sign up</a>
     </form>
-    <script src="https://kit.fontawesome.com/6e4d54a045.js"
-     crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/6e4d54a045.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
