--- a/Lesson_12_Grid/index.html
+++ b/Lesson_12_Grid/index.html
@@ -1,27 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style/style.css" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="grid_container">
-        <div class="grid_item" >1</div>
-        <div class="grid_item" >2</div>
-        <div class="grid_item" >3</div>
-        <div class="grid_item" >4</div>
-        <div class="grid_item" >5</div>
-        <div class="grid_item" >6</div> 
-        <div class="grid_item" >7</div>
-        <div class="grid_item" >8</div>
-        <div class="grid_item" >9</div>
-        <div class="grid_item" >10</div>
-        <div class="grid_item" >11</div>
-        <div class="grid_item" >12</div>
-
+      <div class="grid_item item1">1</div>
+      <div class="grid_item">2</div>
+      <div class="grid_item">3</div>
+      <div class="grid_item">4</div>
+      <div class="grid_item item5">5</div>
+      <div class="grid_item">6</div>
+      <div class="grid_item">7</div>
+      <div class="grid_item">8</div>
+      <div class="grid_item">9</div>
+      <div class="grid_item">10</div>
+      <div class="grid_item">11</div>
+      <div class="grid_item">12</div>
+      <br /><br /><br /><br /><br /><br />
     </div>
-</body>
+    <div class="grid_container2">
+      <div class="header">Header</div>
+      <div class="sidebar">Sidebar</div>
+      <div class="content">Content</div>
+      <div class="footer">Footer</div>
+    </div>
+  </body>
 </html>
