--- a/FigmaProjekt1/index.html
+++ b/FigmaProjekt1/index.html
@@ -16,7 +16,7 @@
 
       <p>главная</p>
       <p>услуги</p>
-      <p>кейсы</p>
+      <p>услуги</p>
       <p>о компании</p>
       <p>контакты</p>
     </header>
