--- a/UdemyCourse/rgb/index.html
+++ b/UdemyCourse/rgb/index.html
@@ -10,7 +10,7 @@
 
 <body>
 	<div id="blau" class="box"></div>
-	<div id="grun" class="box"></div>
+	<div id="gruen" class="box"></div>
 	<div id="rot" class="box"></div>
 
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
