--- a/JSCurs/Lesson3/index.html
+++ b/JSCurs/Lesson3/index.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="stylesheet" href="/style/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
   <body>
     <script src="/scripts/script.js"></script>
+    <script src="/scripts/functions.js"></script>
   </body>
 </html>
