--- a/JSCurs/Lesson15/index.html
+++ b/JSCurs/Lesson15/index.html
@@ -8,6 +8,8 @@
     <title>Document</title>
   </head>
   <body>
+    <button class="btn">Ielikt tekstu</button>
+    <div id="container"></div>
     <script src="/scripts/script.js"></script>
   </body>
 </html>
