--- a/JSCurs/Lesson18/index.html
+++ b/JSCurs/Lesson18/index.html
@@ -46,6 +46,29 @@
       class="img_slider"
     />
 
+    <br /><br /><br />
+    <button class="gameBtn">Push</button>
+    <div class="gameRezult"></div>
+
+    <br /><br /><br />
+    <hr />
+    <form class="addForm">
+      <label for="">
+        <p>Tega tips</p>
+        <input type="text" name="type" />
+      </label>
+      <label for="">
+        <p>Saturs</p>
+        <input type="text" name="content" />
+      </label>
+      <label for="">
+        <p>Krasa</p>
+        <input type="color" name="color" />
+      </label>
+      <button>Add</button>
+    </form>
+    <div class="formColor"></div>
+
     <script src="/scripts/script.js"></script>
   </body>
 </html>
