--- a/JSCurs/Lesson 4 React SaitTemplate/site_template/public/index.html
+++ b/JSCurs/Lesson 4 React SaitTemplate/site_template/public/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <!-- <style>
+      @import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap");
+    </style> -->
+    <!-- <style>
+      @import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,400;0,700;0,900;1,300;1,400;1,700&display=swap');
+      </style> -->
   </head>
   <body>
     <div id="root"></div>
